<resources>
    <string name="app_name">Dice SDM</string>
    <string name="configuracoes">Configurações</string>
    <string name="clique_no_bot_o_para_sortear_um_novo_numero">Clique no botão para sortear um novo número</string>
    <string name="sortear">Sortear</string>
    <string name="o_bingo_ainda_nao_comecou">O Bingo ainda não começou</string>
    <string name="entre_com_a_quantidade_de_numeros">Entre com a quantidade de números</string>
    <string name="salvar">Salvar</string>
    <string name="ultimo_numero_sorteado">Último Número Sorteado</string>
    <string name="resetar_jogo">Resetar Jogo</string>
    <string name="numeros_sorteados">Números Sorteados:</string>
    <string name="todos_os_numeros_foram_sorteados">Todos os números foram sorteados</string>
    <string-array name="numero_dados">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
